# seam-carving-opencl

./: CMakeLists.txt  header.h  kernel.cpp  main.cpp  run  serial.cpp  tests.cpp  tests.h  util.cpp
